# audio-streamer

./: CMakeLists.txt  CNAME  README.md  example.cpp
src/: client  client.cpp  client_handler.cpp  client_handler.hpp  network_manager.cpp  network_manager.hpp  play_audio.py  server  server.cpp  sync_handler.hpp  test_filetransfer.cpp  test_hash.cpp  test_server  test_thread.cpp  thread_handler.cpp  thread_handler.hpp  utils.cpp  utils.hpp
src/udp/: client  client.cpp  server  server.cpp
